# uuvr

./: .gitignore  README.md  cli.py  pyproject.toml  separate.py
src/uuvr/: cli.py  separate.py  weights.py
src/uuvr/uvr5_pack/: utils.py
src/uuvr/uvr5_pack/lib_v5/: layers_123821KB.py  layers_33966KB.py  nets.py  nets_33966KB.py  nets_537238KB.py  nets_61968KB.py
